tests/NormalTests/paczka2/big_fuzzy/30562084.err
Error in line 13: bazxn A850 70,1
Error in line 19: IIZ A850 40,6
Error in line 23: IIZ S40 14,0
Error in line 16: S58 S58 76,0
Error in line 17: bazxn S40 31,0
Error in line 29: bazxn A405 44,8
Error in line 21: mLxxcb S58 337,0
Error in line 40: mLxxcb A405 18,5
Error in line 56: bazxn S40 98,1
Error in line 73: PIYs5moB S40 16,2
Error in line 75: mLxxcb S40 77,0
Error in line 97: jJgCrrX S40 63,1
Error in line 89: PIYs5moB S58 14,7
Error in line 106: KgU S58 33,30
Error in line 103: KgU S58 14,1
Error in line 114: IIZ S40 10,0
Error in line 93: S58 A850 61,1
Error in line 121: S58 S40 96,9
Error in line 115: mLxxcb S58 41,8
Error in line 126: jJgCrrX S58 87,64
Error in line 129: S58 S58 67,4
Error in line 112: jJgCrrX A850 68,5
Error in line 142: mLxxcb A405 83,8
Error in line 145: mLxxcb S58 3n,4
Error in line 140: jJgCrrX S58 92,6
Error in line 148: jJgCrrX A850 46,8
Error in line 154: S58 S40 7,7
Error in line 144: mLxxcb S58 19,7
Error in line 162: KgU S40 71,1
Error in line 166: bazxn S40 83,1
Error in line 168: KgU S40 1,4
Error in line 183: bazxn S40 6",7
Error in line 179: bazxn S58 2,4
Error in line 177: KgU S58 4,4
Error in line 161: S58 A405 43,3
Error in line 197: S58 S58 31,0
Error in line 185: IIZ S58 73,4
Error in line 201: bazxn S40 167,8
Error in line 207: PIYs5moB S40 73,0
Error in line 217: IIZ A850 46,7
Error in line 227: jJgCrrX S58 86,6
Error in line 232: bazxn A850 -4,8
Error in line 235: S58 A405 -2,8
Error in line 230: jJgCrrX S40 25,7
Error in line 244: jJgCrrX S40 971
Error in line 240: bazxn S40 37,9
